<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CiviWorx</string>
    <string name="title_activity_map_view">CiviWorx</string>
    <string name="title_activity_login">CiviWorx Login</string>
    <string name="title_activity_register">CiviWorx Registration</string>
    <string name="title_activity_settings">Settings</string>
    <string name="btn_login_text">Existing User</string>
    <string name="btn_register_text">Create Account</string>
    <string name="btn_anonymous_text">Stay Anonymous</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_login_do">Login</string>
    <string name="btn_register_do">Register</string>
    <string name="menu_new_report">Report Work</string>
    <string name="menu_msg_inbox">Messages</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_sync">Sync Now</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reply">Reply</string>
    <string name="pref_push_notice">Enable push notifications</string>
    <string name="pref_push_notice_summ">Allow application to receive push notifications when a report is updated</string>
    <string name="pref_sync_method">When to synchronise data</string>
    <string name="pref_sync_method_default">2</string>

    <string-array name="pref_sync_method_entries">
        <item>Manually</item>
        <item>WiFi Only</item>
        <item>Always</item>
    </string-array>
    <string-array name="pref_sync_method_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="hint_login_user">Email address</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_profile_name">Your name</string>
    <string name="hint_profile_location">Suburb/Location</string>
    <string name="hint_profile_bio">and a brief bio.</string>
    <string name="instruction_register_login_details">Please enter your email address and choose a password:</string>
    <string name="instruction_confirm_password">Confirm your password:</string>
    <string name="instruction_profile_fields">Tell us a little about yourself:</string>
    <string name="title_activity_profile">Manage Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="map_new_marker_title">New Report</string>
    <string name="map_new_marker_instructions">Move marker if required then tap here</string>
    <string name="title_activity_view_report">Report Details</string>
    <string name="title_activity_inbox">Inbox</string>

</resources>
