<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="au.edu.unimelb.comp90018.civiworx.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/profile_fragment_image"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:src="@drawable/mysteryman"
            android:layout_weight="1"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/profile_fragment_name"
                android:hint="@string/hint_profile_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/profile_fragment_location"
                android:hint="@string/hint_profile_location"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/profile_fragment_bio"
                android:lines="5"
                android:hint="@string/hint_profile_bio"
                android:gravity="top" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
